--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
   "dependencies": {
     "nopt": "~2.1.2",
     "mkdirp": "~0.3.5"
-  }
+  },
+  "bin":{
+"less-to-stylus":"./bin/less-to-stylus"
+}
 }
